<resources>
    <string name="app_name" translatable="false">TeamInSync</string>
    <string name="welcome_default">Benvenuto Utente!</string>
    <string name="my_team_label">La mia squadra:</string>
    <string name="trainings_label">Allenamenti</string>
    <string name="team_name_default">NOME SQUADRA</string>
    <string name="league_name_default">Nome Campionato</string>
    <string name="city_stadium_default">Nome dello Stadio - Città</string>
    <string name="squad_list_btn_label">Squadra</string>
    <string name="login_welcome_text">Benvenuto su TeamInSync, accedi per continuare</string>
    <string name="sign_in_button">Accedi</string>
    <string name="register_button">Registrati</string>
    <string name="auth_ok">Accesso avvenuto correttamente!</string>
    <string name="auth_session_creation_err">ATTENZIONE: Errore nella creazione della sessione!</string>
    <string name="auth_generic_err">ATTENZIONE: Impossibile effettuare l\'accesso!</string>
    <string name="register_ok">Registrazione avvenuta con successo! Completa i tuoi dati.</string>
    <string name="register_err">ATTENZIONE: Registrazione non riuscita!</string>
    <string name="connection_err">ATTENZIONE: Si è verificato un errore di connessione!</string>
    <string name="form_not_compiled">ATTENZIONE: Compilare tutti i campi!</string>
    <string name="registration_wizard_title">Completa il tuo profilo</string>
    <string name="reg_wizard_username_hint" translatable="false">Username</string>
    <string name="reg_wizard_name_label">Nome</string>
    <string name="reg_wizard_surname_label">Cognome</string>
    <string name="reg_wizard_birth_date_label">Data di Nascita (AAAA-MM-GG)</string>
    <string name="reg_wizard_select_role_label">Seleziona il tuo ruolo nella squadra:</string>
    <string name="reg_wizard_athlete_label">Atleta</string>
    <string name="reg_wizard_coach_label">Allenatore</string>
    <string name="reg_wizard_submit">Completa registrazione!</string>
    <string name="reg_wizard_team_selector_label">Seleziona la squadra di cui fai parte:</string>
    <string name="teams_load_err">Errore nel caricamento delle squadre</string>
    <string name="team_selector_label">Seleziona una squadra…</string>
    <string name="no_team_selected">ATTENZIONE: Per favore selezionare una squadra!</string>
    <string name="invalid_date">ATTENZIONE: Data di nascita inserita non valida o in formato sbagliato!</string>
    <string name="empty_form_fields">ATTENZIONE: Compilare tutti i campi!</string>
    <string name="homepage_welcome">Benvenuto,</string>
    <string name="member_list_def_header">Membri della squadra</string>
    <string name="member_tile_default">Nome Cognome</string>
    <string name="member_tile_info_def">Username e data di nascita</string>
    <string name="coaching_staff_label">Staff Tecnico</string>
    <string name="athletes_label">Atleti</string>
    <string name="no_users_found">Nessun membro trovato!</string>
    <string name="profile_details_label">Profilo Utente</string>
    <string name="born_on_label_def">Nato il: —/—/----</string>
    <string name="born_on_label">Nato il:</string>
    <string name="username_label_def" translatable="false">\@username</string>
    <string name="to_trainings_label">Allenamenti</string>
    <string name="to_squad_list_label">Alla Rosa</string>
    <string name="athlete_label">Atleta</string>
    <string name="coach_label">Allenatore</string>
    <string name="training_list_header">Allenamenti di</string>
    <string name="my_training_list_header">I miei allenamenti</string>
    <string name="duration_label">Durata</string>
    <string name="repetitions_label">Ripetizioni</string>
    <string name="training_target_label">Obiettivo (in minuti o n°ripetizioni)</string>
    <string name="deadline_label">Scadenza (AAAA-MM-GG)</string>
    <string name="complete_btn_label">Completa</string>
    <string name="append_btn_label">Nuovo esercizio</string>
    <string name="new_training_frag_header">Nuovo Allenamento</string>
    <string name="exercise_title_hint">Titolo esercizio</string>
    <string name="training_type_label">Tipologia:</string>
    <string name="upload_error_label">Errore nel caricamento sul database</string>
    <string name="exercise_added">Esercizio aggiunto all\'allenamento!</string>
    <string name="training_name_placeholder">Nome Esercizio</string>
    <string name="training_info_placeholder">Obiettivo: — | Scadenza: ----/--/--</string>
    <string name="start_training_btn_label">Inizia</string>
    <string name="complete_training_label">Completa</string>
    <string name="no_trainings_found">Nessun allenamento trovato</string>
    <string name="training_completion_error">Errore nel completamento</string>
    <string name="training_reps_completed_on_time">Allenamento completato, complimenti!</string>
    <string name="training_reps_completed_late">Allenamento completato in ritardo!</string>
    <string name="splash_welcome_label">Benvenuto! Stiamo preparando tutto…</string>
    <string name="confirm_logout">Vuoi effettuare il logout?</string>
    <string name="confirm">Conferma</string>
    <string name="cancel">Annulla</string>
    <string name="push_new_training_title">Nuovo allenamento creato!</string>
    <string name="push_new_training_body">É stata creata una nuova sessione di allenamento!</string>
    <string name="notification_tile_title_def">Titolo notifica</string>
    <string name="notification_tile_msg_def">Contenuto notifica</string>
    <string name="marked_as_read">Segnata come letta</string>
    <string name="marked_unread">Segnata come da leggere</string>
    <string name="notif_fragment_title">Notifiche</string>
    <string name="no_notifications_found">Nessuna notifica da mostrare</string>
    <string name="tracking_frag_title">Tracking Allenamento</string>
    <string name="tracking_frag_time_placeholder" translatable="false">00:00.00</string>
    <string name="tracking_frag_current_exercise">Esercizio corrente</string>
    <string name="tracking_frag_name_placeholder">Nome esercizio</string>
    <string name="tracking_frag_target_placeholder">Obiettivo da raggiungere</string>
    <string name="tracking_frag_complete_training">Concludi allenamento</string>
    <string name="training_completed_label">Obiettivo raggiunto, complimenti!</string>
    <string name="training_canceled_label">Allenamento annullato. Obiettivo non raggiunto!</string>
    <string name="training_auto_completed">Obiettivo raggiunto, progressi allenamento salvati!</string>
    <string name="target_label">Obiettivo</string>
    <string name="reps_label">ripetizioni</string>
    <string name="generic_error">Si è verificato un errore!</string>
    <string name="photo_source_camera">Scatta foto</string>
    <string name="photo_source_gallery">Scegli dalla Galleria</string>
    <string name="photo_source_selection_title">Scegli la foto profilo</string>
    <string name="photo_upload_error">Errore nel caricamento della foto profilo</string>
    <string name="edit_profile_submit">Salva Modifiche</string>
    <string name="changes_saved_label">Modifiche salvate con successo!</string>
    <string name="error_changes_save">Errore nel salvataggio delle modifiche</string>
    <string name="edit_wizard_title">Modifica il tuo profilo</string>
    <string name="loader_default_string">Caricamento…</string>
    <string name="sign_in_load_msg">Accesso in corso…</string>
    <string name="register_load_msg">Registrazione in corso…</string>
    <string name="members_load_msg">Caricamento membri squadra…</string>
    <string name="loading_user_msg">Caricamento dati utente…</string>
    <string name="trainings_load_msg">Caricando gli allenamenti…</string>
    <string name="notifications_load_msg">Caricando le notifiche…</string>
    <string name="upload_training_loading_msg">Pubblicando la sessione…</string>
    <string name="upload_new_user_msg">Creando il nuovo utente…</string>
    <string name="upload_existing_user_msg">Aggiornando le informazioni…</string>
    <string name="exercise_load_msg">Caricando i dati dell\'allenamento…</string>
    <string name="logout_load_msg">Effettuando il logout…</string>
    <string name="close_notif_detail">Chiudi notifica</string>
    <string name="reg_critical_error">ATTENZIONE: Errore critico in fase di registrazione, contattare l\'assistenza!</string>
    <string name="reg_data_upload_error">ATTENZIONE: Errore nel salvataggio dati sul database</string>
    <string name="error_user_not_found">ATTENZIONE: Utente con mail %1$s non trovato nel sistema!</string>
    <string name="user_default_label">utente</string>
    <string name="error_invalid_user">ATTENZIONE: Errore nel caricamento dell\'utente, utente non valido!</string>
    <string name="error_user_training_data">ATTENZIONE: Errore nel caricamento delle informazioni utente</string>
    <string name="error_team_loading">ATTENZIONE: Errore nel caricamento delle info squadra</string>
    <string name="training_goal_label">Obiettivo:</string>
    <string name="training_expiry_label">Scadenza:</string>
</resources>